# Ressonance

./: .gitignore  Cargo.toml  README.md
src/: app.rs  input.rs  lib.rs  main.rs  terminal.rs
src/app/: library.rs  mod.rs  playback.rs  update.rs
src/audio/: command.rs  mod.rs  player.rs  state.rs  thread.rs
src/player/: app_state.rs  format.rs  metadata.rs  mod.rs  playlist.rs  state.rs  track.rs
src/ui/: layout.rs  mod.rs
src/ui/components/: footer.rs  header.rs  mod.rs  now_playing.rs  playlist.rs  visualizer.rs  visualizer_render.rs
